[package]
name = "lunatic-bench"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.3.10"
serde = { version = "1.0.125", features = ["derive"] }
